unpackaged/main/default/objects/Case_Count__c/Case_Count__c.object-meta.xml
<CustomObject>
    <description>Mirror case object which allows for easy counting of cases created in last &quot;n&quot; days</description>
    <label>Case Count</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>