unpackaged/main/default/objects/Case_Count__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Counts</relationshipLabel>
    <relationshipName>Case_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>