unpackaged/main/default/objects/Case_Count__c/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <description>Age of case (in days)
Used for reporting &amp; account roll-up summary criteria
Populated with apex triggers: daily batch &amp; case create</description>
    <inlineHelpText>Age of case (in days)</inlineHelpText>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>