unpackaged/main/default/objects/Case_Count__c/fields/Case_Age_VALIDATION__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_VALIDATION__c</fullName>
    <description>Case Age formula field - used for validation (should match Case Age)
-in some cases the age is off by a day - this is due to rounding</description>
    <formula>now()- Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Age formula field - used for validation (should match Case Age)
-in some cases the age is off by a day - this is due to rounding</inlineHelpText>
    <label>Case Age - VALIDATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>