unpackaged/main/default/objects/Case_Count__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Case Status from related case record
Used for reporting &amp; account roll-up summary criteria
Populated with apex triggers: case create &amp; status change</description>
    <inlineHelpText>Case Status from related case record</inlineHelpText>
    <label>Case Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>