unpackaged/main/default/objects/Case_Count__c/fields/Case_Status_VALIDATION__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_VALIDATION__c</fullName>
    <description>Case Age formula field - used for validation (should match Case Status)</description>
    <formula>Text(Case__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Age formula field - used for validation (should match Case Status)</inlineHelpText>
    <label>Case Status - VALIDATION</label>
    <type>Text</type>
</CustomField>