unpackaged/main/default/objects/Case_Count__c/fields/PlatTrial_was_on__c.field-meta.xml
<CustomField>
    <fullName>PlatTrial_was_on__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the Platinum Trial, it counts how many cases have been open during the platinum trial period.</description>
    <label>PlatTrial was on</label>
    <type>Checkbox</type>
</CustomField>